--- a/problem testing/point_of_sales_form.html
+++ b/problem testing/point_of_sales_form.html
@@ -23,7 +23,7 @@
   </div>
   <div class="form-group">
     <label for="inputAddress">Total</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+    <input type="text" class="form-control" id="totalAmount" placeholder="1234 Main St">
   </div>
 
   <div class="form-group">
