--- a/problem testing/point_of_sales_form.html
+++ b/problem testing/point_of_sales_form.html
@@ -41,7 +41,7 @@
     </div>
     <div class="form-group col-md-6">
       <label for="inputPassword4">Amount Left</label>
-      <input disabled type="password" class="form-control" id="inputPassword4" placeholder="Password">
+      <input disabled type="password" class="form-control" id="inputPassword4" placeholder="0">
     </div>
   </div>
 
